# CS-UBB

./: README.md  Web Programming
Artificial Intelligence/lab1/: homework.ipynb  lab1-matplotlib.ipynb  lab1-numpy.ipynb  lab1-pil.ipynb  lab1-pytorch.ipynb  smrh.txt
Artificial Intelligence/lab10/: Lab_10_2023.ipynb
Artificial Intelligence/lab2/: AI_lab2_2023.ipynb
Artificial Intelligence/lab3/: Lab3_AI_2023_solved.ipynb
Artificial Intelligence/lab4/: AI_lab_4_2023-solved 2.ipynb
Artificial Intelligence/lab5/: AI_lab_5_2023-solved.ipynb  AI_lab_5_2023-unsolved.ipynb
Artificial Intelligence/lab6/: utils.py
Artificial Intelligence/lab7/: AI_lab_7_2023_bug_fix_v4.ipynb
Artificial Intelligence/lab8/: K-means_lab_8.ipynb
Computer Networks/: README.md  practice2.pkt
DSA/lab1/: ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp  main.cpp
DSA/lab2/: App.cpp  ExtendedTest.cpp  IndexedList.cpp  IndexedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp
Databases/: DanceStudio-insert-update-delete-select.sql  lab1.sql  lab2.sql  lab3.sql
Databases/PRACTICAL/: query.sql
Databases/lab4/: Generators.sql  TestProcedures.sql
Functional and Logic Programming/: p1.pl  p2.pl  p3.pl  test_prolog.pl
Functional and Logic Programming/Lisp/: #helloworld.lisp#  add-two-number.lisp  l1a.lisp  l1b.lisp  l1b.lisp~  model_matematic_l1a.pages  practice1.lisp  practice1.lisp~
Functional and Logic Programming/Prolog/: Seminar2.pages  divisorsSum.pl  seminar2.pl  seminar3.pl  seminar4.pl  test1.pl  test_prep.pl
Fundamentals of Programming/a1/: p1.py  p2.py  p3.py
Fundamentals of Programming/a11-ScortarIrina-main/: board.py  game.py
GraphAlgo/: main.py
GraphAlgo/lab1/: Graph.py  UI.py
GraphAlgo/lab2/: main.py
GraphAlgo/lab3/: Graph.py  UI.py  graph.txt
GraphAlgo/lab4-5/: PriorityDict.py  UI.py  UndirectedGraph.py  graph.modified.txt  main.py
GraphAlgo/lab5/: CMakeLists.txt  ExtendedTest.cpp  ExtendedTest.h  ShortTest.cpp  ShortTest.h  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h  customHash.cpp  customHash.h  edge.cpp  edge.h  main.cpp  mainProgram.cpp  weightedGraph.cpp  weightedGraph.h
OOP/: GUI.ui
OOP/Bachelor Theses/: AppException.h  CMakeLists.txt  Controller.cpp  Controller.h  EditStudentWindow.cpp  EditStudentWindow.h  EditStudentWindow.ui  GUI.cpp  GUI.h  GUIManager.cpp  GUIManager.h  Observer.h  PROBLEM STATEMENT  Student.cpp  Student.h  StudentRepository.cpp  StudentRepository.h  Subject.h  Teacher.cpp  Teacher.h  TeacherRepository.cpp  TeacherRepository.h  main.cpp  students.txt  teachers.txt
OOP/Code Revision/: CMakeLists.txt  files.txt  main.cpp  members.txt
OOP/Code Revision/controller/: Controller.cpp  Controller.h
OOP/Code Revision/domain/: AppException.h  Member.cpp  Member.h  Observer.h  SourceFile.cpp  SourceFile.h  Subject.h
OOP/Code Revision/repository/: MemberRepository.cpp  MemberRepository.h  SourceFileRepository.cpp  SourceFileRepository.h
OOP/Code Revision/ui/: GUI.cpp  GUI.h  GUI.ui  GUIManager.cpp  GUIManager.h
OOP/Task Manager/: CMakeLists.txt  main.cpp  programmers.txt  tasks.txt
OOP/Task Manager/controller/: Controller.cpp  Controller.h
OOP/Task Manager/domain/: AppException.h  Observer.h  Programmer.cpp  Programmer.h  Subject.h  Task.cpp  Task.h
OOP/Task Manager/repository/: ProgrammersRepository.cpp  ProgrammersRepository.h  TasksRepository.cpp  TasksRepository.h
OOP/Task Manager/ui/: GUIManager.cpp  GUIManager.h  gui.cpp  gui.h  gui.ui
OOP/a11-12/: CMakeLists.txt  CSVRepository.cpp  CSVRepository.h  GI.cpp  GUI.h  README.md  Repository.cpp  Repository.h  Service.cpp  Service.h  Tutorial.cpp  Tutorial.h  Tutorials.csv  Tutorials.html  Tutorials.txt  UserRepository.h  UserService.cpp  Validator.cpp  Validator.h  Watchlist.h  main.cpp
OOP/a3-4/: Controller.c  Controller.h  Offer.c  Offer.h  OfferRepo.c  OfferRepo.h  UI.c  UI.h
OOP/a5-6/: DynamicVector.cpp  DynamicVector.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tests.cpp  Tests.h  Tutorial.cpp  Tutorial.h  UI.cpp  UI.h  Watchlist.cpp  Watchlist.h  main.cpp
OOP/a8-9/: CMakeLists.txt  HTMLRepository.cpp  HTMLRepository.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tutorial.cpp  Tutorial.h  Tutorials.csv  Tutorials.txt  UI.cpp  UI.h  UserRepository.cpp  UserService.h  Validator.cpp  Watchlist.cpp  main.cpp
OOP/practice_test_3_dogs_gui/: CMakeLists.txt  Dog.cpp  Dog.h  GUI.cpp  GUI.h  Repository.cpp  Repository.h  Service.cpp  Service.h  main.cpp
Probability and Statistics/: script-3.pages  totally_not_cheatsheet.m  totally_not_cheatsheet.txt
Probability and Statistics/Practice Exam/: ex1.m  ex2.m  ex3.m  ex5.m  ex6.m  ex7.m
Probability and Statistics/lab1/: pb1.m  pb2.m
Probability and Statistics/lab2/: script-3.m
Probability and Statistics/lab3/: pb1.m  pb2.m  pb3.m
Probability and Statistics/lab4/: pb2_a.m  pb2_b.m  pb2_c.m  pb2_d.m
Probability and Statistics/lab5/: B1.m
Probability and Statistics/lab6/: pb1.m
Software Engineering/: DestinationBucketList.mdj
Web Programming/: README.md
(+257 files in other folders)
